# amrVolumeRenderer

./: .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE.TXT  README.md  pyproject.toml
CMake/: amrVolumeRendererConfig.h.in  amrVolumeRendererMacros.cmake  miniGraphicsConfig.h.in  miniGraphicsMacros.cmake
Common/: CMakeLists.txt  CameraUtils.hpp  Color.hpp  Compositor.hpp  Image.cpp  Image.hpp  ImageColorDepth.hpp  ImageColorOnly.hpp  ImageFull.hpp  ImageRGBAFloatColorDepthSort.cpp  ImageRGBAFloatColorDepthSort.hpp  ImageRGBAFloatColorOnly.cpp  ImageRGBAFloatColorOnly.hpp  ImageRGBAUByteColorFloatDepth.cpp  ImageRGBAUByteColorFloatDepth.hpp  ImageRGBAUByteColorOnly.cpp  ImageRGBAUByteColorOnly.hpp  ImageRGBFloatColorDepth.cpp  ImageRGBFloatColorDepth.hpp  ImageSparse.cpp  ImageSparse.hpp  ImageSparseColorDepth.hpp  ImageSparseColorOnly.hpp  LayeredImageInterface.hpp  LayeredVolumeImage.cpp  LayeredVolumeImage.hpp  MainLoop.cpp  MainLoop.hpp  Mesh.cpp  SavePNG.cpp  SavePNG.hpp  SavePPM.cpp  SavePPM.hpp  Timer.cpp  Timer.hpp  Viewport.hpp  VisibilityOrdering.cpp  VisibilityOrdering.hpp  VolumePainter.cpp  VolumePainter.hpp  (+5 more)
Common/Testing/: CMakeLists.txt  ImageFullTest.cpp  ImageSparseTest.cpp
DirectSend/Base/: CMakeLists.txt  DirectSendBase.cpp  DirectSendBase.hpp
DirectSend/Overlap/: CMakeLists.txt  DirectSendOverlap.cpp
Paint/: CMakeLists.txt  PainterViskores.cpp  PainterViskores.hpp
ViskoresExample/: CMakeLists.txt  README.md  ViskoresExample.hpp  main.cpp
ViskoresVolumeExample/: CMakeLists.txt  README.md  ViskoresVolumeExample.hpp  main.cpp
ViskoresVolumeRenderer/: CMakeLists.txt  README.md  ViskoresVolumeRenderer.cpp  ViskoresVolumeRenderer.hpp  main.cpp
VolumeRenderer/: CMakeLists.txt  README.md  SceneBuilder.cpp  SceneBuilder.hpp  VolumeRenderer.cpp  VolumeRenderer.hpp  VolumeRendererApi.cpp  VolumeRendererApi.hpp  main.cpp
VolumeRenderer/Examples/: RenderFromMultiFab.cpp
python/: CMakeLists.txt
python/amrVolumeRenderer/: __init__.py  module.cpp
python/examples/: compute_histogram.py  render_galaxy.py  render_volume.py  render_volume_rotate.py  render_volume_time.py
python/miniGraphics/: __init__.py  module.cpp
