[build-system]
requires = [
  "scikit-build-core>=0.8.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "amrVolumeRenderer"
version = "0.1.0"
description = "Python bindings for the amrVolumeRenderer MPI volume renderer"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE.TXT" }
authors = [
  { name = "amrVolumeRenderer developers" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/lanl/amrVolumeRenderer"

[tool.scikit-build]
minimum-version = "0.8"
cmake.build-type = "Release"
cmake.args = ["-DCMAKE_BUILD_TYPE=Release"]
cmake.define = { AMRVOLUMERENDERER_ENABLE_TESTING = "OFF" }
wheel.packages = ["python/amrVolumeRenderer"]
sdist.include = [
  "CMakeLists.txt",
  "CMake",
  "Common",
  "DirectSend",
  "python",
  "VolumeRenderer",
  "nanobind",
  "AMReX",
  "LICENSE.TXT",
  "README.md",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
amrVolumeRenderer = { path = ".", editable = true }

[tool.pixi.tasks]
